TEZ-4633: Set Baseline to JDK 21 and cleanup obsolete JVM configurations